Add route login, news, role laravel
